--- a/Logistic Regression by Python v2.ipynb
+++ b/Logistic Regression by Python v2.ipynb
@@ -42,7 +42,10 @@
     "from sklearn.metrics import roc_auc_score, roc_curve\n",
     "\n",
     "from scipy.stats import ks_2samp # for KS calculation\n",
-    "from sklearn.metrics import roc_auc_score # for GINI calculation"
+    "from sklearn.metrics import roc_auc_score # for GINI calculation\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -383,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "0e7f5c1d",
    "metadata": {},
    "outputs": [
@@ -817,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ff3ccf77",
    "metadata": {},
    "outputs": [
@@ -850,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "e7a4b952",
    "metadata": {},
    "outputs": [
@@ -880,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "dfc7d1fe",
    "metadata": {},
    "outputs": [
@@ -908,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "df4d9414",
    "metadata": {},
    "outputs": [
@@ -934,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "20e63a44",
    "metadata": {},
    "outputs": [
@@ -984,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "3abf4eaf",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "5054bf42",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "c506e0f2",
    "metadata": {},
    "outputs": [
@@ -1258,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "6e16d8c4",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "ff1dd3d9",
    "metadata": {},
    "outputs": [],
@@ -1353,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "c83b1cd6",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "aae1f37c",
    "metadata": {},
    "outputs": [
@@ -1428,7 +1431,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "4a5dfa8e",
    "metadata": {},
    "outputs": [
@@ -1653,7 +1656,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "78ecaf1c",
    "metadata": {},
    "outputs": [],
@@ -1714,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "31ae898c",
    "metadata": {},
    "outputs": [],
@@ -1737,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "d8c19502",
    "metadata": {},
    "outputs": [],
@@ -1766,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "4676d388",
    "metadata": {},
    "outputs": [
@@ -1819,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "2faf52ea",
    "metadata": {},
    "outputs": [
@@ -1853,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "63c650e4",
    "metadata": {},
    "outputs": [
@@ -1911,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "0e88b5a7",
    "metadata": {},
    "outputs": [],
@@ -1940,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "e006483d",
    "metadata": {},
    "outputs": [
@@ -2153,7 +2156,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2176,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "123d8291",
    "metadata": {},
    "outputs": [
@@ -2195,14 +2198,6 @@
       "7  (677.052, 684.034]     10.002467  0.056145\n",
       "8  (684.034, 693.197]     10.027140  0.045266\n",
       "9  (693.197, 722.157]      9.967613  0.029428\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\keung_000\\AppData\\Local\\Temp\\ipykernel_21540\\1435653653.py:28: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  ax1.set_xticklabels(bin_stats['score_bin'], rotation=45)\n"
      ]
     },
     {
@@ -2286,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "b382d889",
    "metadata": {},
    "outputs": [
@@ -2316,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "4bf5d9e2",
    "metadata": {},
    "outputs": [],
@@ -2382,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "7d71d7a4",
    "metadata": {},
    "outputs": [
@@ -2428,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "2d44450b",
    "metadata": {},
    "outputs": [
@@ -2444,14 +2439,6 @@
       "HasDependents_Num: Original Value = 1, Bin = (0.5, 1.5], WOE = 0.11298919323284506\n",
       "PD: 0.11687638016390152\n",
       "Applicant's Credit Score: 658\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\keung_000\\anaconda3\\lib\\site-packages\\sklearn\\base.py:420: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
